# hip3-scanner

./: .env.example  .gitignore  README.md  check_keys.py  config.example.json  parse_state.py  pyproject.toml  research.py  summarize_state.py
scripts/: ensure_paper_live.sh  run_paper_live.sh  watch_paper_live.sh
src/hip3_scanner/: cli.py  client.py  config.py  core.py  live_trader.py  models.py  paper.py  scanner.py  taxonomy.py
src/hip3_scanner/exchanges/: __init__.py  hyperliquid.py
tests/: test_core.py
